# material-you-generator

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  theme.json
src/: main.rs
